new Character(...) -> Character.valueOf(...)
git-svn-id: svn+ssh://svn.hcf.dev/var/spool/scm/repository.svn/ball-riddler538@6403 b3e4a033-f9ea-474d-ac63-5dcbede9114a